--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
           rm -rf $BIN/*.beam erl_crash.dump
           mkdir -p $BIN
           pwd
-          erlc -DTEST -pa +debug_info -W0 -I include -o $BIN $SRC/*.erl $SRC/**/*.erl
+          erlc -DTEST +debug_info -W0 -I include -o $BIN $SRC/*.erl $SRC/**/*.erl
           # erlc -DTEST -pa $BIN +debug_info -I $INCLUDE -o $BIN $TEST/**/*.erl
       - name: List
         run: |
