--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
           mkdir -p $BIN
           pwd
           erlc -DTEST +debug_info -W0 -I include -o $BIN $SRC/*.erl $SRC/**/*.erl
-          # erlc -DTEST -pa $BIN +debug_info -I $INCLUDE -o $BIN $TEST/**/*.erl
+          erlc -DTEST -pa $BIN +debug_info -W0 -I $INCLUDE -o $BIN $TEST/**/*.erl
       - name: List
         run: |
           ls -lart $BIN
