--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,5 +32,8 @@ jobs:
       - name: Test
         run: |
           echo "CodeBEAM/ID server test"
-          $CMD $SRC/examples/erlang/codebeam/id_server_demo.erl -v all -I include -O $BIN
+          $CMD $SRC/examples/erlang/codebeam/id_server_demo.erl -v all -I include -o $BIN
           diff $BIN/id_server_demo $TEST/generated/codebeam/id_ts_server_demo_ref
+          echo "CodeBEAM/ID TS server test"
+	  $CMD $SRC/examples/erlang/codebeam/id_ts_server_demo.erl -v all -I include -o $BIN
+	  diff $BIN/id_ts_server_demo $TEST/generated/codebeam/id_ts_server_demo_ref
