--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,5 +41,8 @@ jobs:
           $CMD $SRC/examples/erlang/de_liguoro_padovani/future.erl -v all -I include -o $BIN
           diff $BIN/future $TEST/generated/de_liguoro_padovani/future_ref
           echo "De'Liguoro & Padovani/Master-worker test"
-          $(CMD) $(SRC)/examples/erlang/de_liguoro_padovani/master_worker.erl -v all -I include -o $(BIN)
-          diff $(BIN)/master_worker $(TEST)/generated/de_liguoro_padovani/master_worker_ref
+          $CMD $SRC/examples/erlang/de_liguoro_padovani/master_worker.erl -v all -I include -o $BIN
+          diff $BIN/master_worker $TEST/generated/de_liguoro_padovani/master_worker_ref
+          echo "De'Liguoro & Padovani/Sessions test"
+          $CMD $SRC/examples/erlang/de_liguoro_padovani/sessions.erl -v all -I include -o $BIN
+          diff $BIN/sessions $TEST/generated/de_liguoro_padovani/sessions_ref          
