--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
 name: Build
 
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
+  push:
+    branches:    
+      - 'dev'
+      - 'prod'
         
 jobs:
   build:
