--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
       - name: List
         run: |
           ls -lart $BIN
-          echo ${{ inputs.log_level }}
+          echo Log level is: ${{ inputs.log_level }}
       - name: Test
         run: |
           echo "CodeBEAM/ID server test"
