Started updating the documentation using OTP 27 -doc attributes.

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{erl_opts, [no_debug_info]}.
+{erl_opts, [debug_info]}.
 {deps, []}.
 
 {escript_main_app, paterl}.
@@ -7,6 +7,14 @@
 {escript_emu_args, "%%! +sbtu +A1\n"}.
 {escript_shebang, "#!/usr/bin/env escript\n"}.
 {escript_comment, "%%Created by Duncan\n"}.
+
+{plugins, [rebar3_ex_doc]}.
+
+{ex_doc, [
+  {extras, ["README.md"]},
+  {main, "README.md"},
+  {source_url, "https://github.com/duncanatt/paterl"}
+]}.
 
 {profiles, [
   {test, [
