Major refactoring restarted.

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,11 @@
-{erl_opts, [debug_info]}.
-{deps, []}.
+%% General Erlang config.
+{erl_opts, [
+  debug_info,
+  {src_dirs, ["src", "test"]}
+]}.
 
+
+%% Escript config.
 {escript_main_app, paterl}.
 {escript_name, "paterl"}.
 {escript_incl_apps, [paterl]}.
@@ -8,14 +13,34 @@
 {escript_shebang, "#!/usr/bin/env escript\n"}.
 {escript_comment, "%%Created by Duncan\n"}.
 
+%% Dependencies.
+{deps, []}.
+
+%% Plugins.
 {plugins, [rebar3_ex_doc]}.
 
+%% ExDoc config.
 {ex_doc, [
   {extras, ["README.md"]},
   {main, "README.md"},
   {source_url, "https://github.com/duncanatt/paterl"}
 ]}.
 
+%% EUnit test config.
+{eunit_opts, [verbose]}.
+{eunit_tests, [
+%%  {module, paterl_syntax}%,
+  {module, paterl_types}
+]}.
+
+{cover_enabled, true}.
+
+{dialyzer, [
+  {plt_apps, all_deps},
+  {plt_extra_apps, [stdlib, syntax_tools, eunit]}
+]}.
+
+%% Build profile config.
 {profiles, [
   {test, [
     {erl_opts, [debug_info]}
