Removed the use of the 'errors.erl' module and 'errors.hrl' include file in favour of the 'paterl_errors.erl', 'paterl_lib.erl' modules and the 'paterl_lib.hrl' include file.

--- a/rebar.config
+++ b/rebar.config
@@ -29,7 +29,7 @@
 %% EUnit test config.
 {eunit_opts, [verbose]}.
 {eunit_tests, [
-%%  {module, paterl_syntax}%,
+  {module, paterl_syntax},
   {module, paterl_types}
 ]}.
 
