Huge refactoring of the 'paterl_anno' module and a reimplementation of all the changes that had to be propagated in the various files. Added 'paterl_anno_tests' module for the 'paterl_anno' module.

--- a/rebar.config
+++ b/rebar.config
@@ -29,8 +29,9 @@
 %% EUnit test config.
 {eunit_opts, [verbose]}.
 {eunit_tests, [
-  {module, paterl_syntax},
-  {module, paterl_types}
+%%  {module, paterl_syntax},
+%%  {module, paterl_types}%,
+  {module, paterl_anno}
 ]}.
 
 {cover_enabled, true}.
