--- a/rebar.config
+++ b/rebar.config
@@ -29,8 +29,8 @@
 %% EUnit test config.
 {eunit_opts, [verbose]}.
 {eunit_tests, [
-%%  {module, paterl_syntax},
-%%  {module, paterl_types}%,
+  {module, paterl_syntax},
+  {module, paterl_types},
   {module, paterl_anno}
 ]}.
 
