--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-      image: erlang:26.2.5
+      image: erlang:27.2.4
 
     env:
       CMD: src/paterl
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Compile
         run: |
-          rm -rf $BIN/*.beam erl_crash.dump
+          rm -rf $BIN/*.beam erl_crash.dump $BIN/*.pat
           mkdir -p $BIN
           pwd
           erlc -DTEST +debug_info -W0 -I include -o $BIN $SRC/*.erl $SRC/**/*.erl
